# farpost_servise

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.html  test.py
api/: Dockerfile  README.md  main.py  pyproject.toml  test_api.py
api/alembic/: env.py
api/alembic/versions/: 1c96f618994a_absactive_abs_is_none.py  1d95a69efe64_add_row_items.py  4854ee74e017_init.py  6bb00e6424a1_add_competitor_id.py  9e72df4fa794_abs_add_start_end_time.py  a58f5c7c893e_cookies.py  aeac7b1077e4_add_tg_chat_id_to_user.py  b6056a30cc94_date_closing_is_none.py
api/src/apps/: models.py
api/src/apps/FARPOST/: models.py  router.py  schemas.py  utilities.py
api/src/settings/: config.py  const.py  db.py
control/: Dockerfile  pyproject.toml  run_requests.py
control/api/: Dockerfile  main.py  pyproject.toml
control/api/src/apps/control/: router.py  schemas.py
control/api/src/settings/: const.py
control/control/: Dockerfile  pyproject.toml  run_requests.py
control/control/utilities/: abstractions.py  competitors.py  const.py  handler_html.py  logs.py  price.py  tg.py  update_cookies.py  utilities.py
control/utilities/: const.py  logs.py  tg.py  update_cookies.py
frontend/: Dockerfile  main.py  pyproject.toml
frontend/components/: abs_class.py  base.py  login.py  view_data.py
frontend/const/: const.py
nginx/: Dockerfile  entrypoint.sh  nginx.conf
nginx/farpost-boost.ru/: fullchain.pem  privkey.pem
