[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
lxml = "^5.0.0"
python-multipart = "^0.0.6"
pytest = "^7.4.4"
httpx = "^0.26.0"
email-validator = "^2.1.0.post1"
selenium = "^4.16.0"
pypasser = "^0.0.5"
pocketsphinx = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
