[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Neko1313 <89246763535@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.18.0"
flet-fastapi = "^0.18.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
